updated alpine Dockerfile

--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -7,33 +7,36 @@ RUN docker-php-ext-install intl zip soap
 # mysqli, pdo, pdo_mysql, pdo_pgsql
 RUN docker-php-ext-install mysqli pdo pdo_mysql pdo_pgsql
 
-# mcrypt, gd
-RUN docker-php-ext-install mcrypt gd
+# mcrypt, gd, iconv
+RUN docker-php-ext-install mcrypt gd iconv
+
+# gmp
+RUN docker-php-ext-install gmp
 
 # php-redis
-ENV PHPREDIS_VERSION php7
+ENV PHPREDIS_VERSION 3.0.0
 
 RUN docker-php-source extract \
-    && curl -L -o /tmp/redis.tar.gz https://github.com/phpredis/phpredis/archive/$PHPREDIS_VERSION.tar.gz  \
-    && mkdir /tmp/redis \
-    && tar -xf /tmp/redis.tar.gz -C /tmp/redis \
-    && rm /tmp/redis.tar.gz \
-    && mkdir /usr/src/php/ext/redis \
-    && mv /tmp/redis/phpredis-$PHPREDIS_VERSION/* /usr/src/php/ext/redis/ \
-    && rm -r /tmp/redis \
-    && ( \
-      cd /usr/src/php/ext/redis \
-      && docker-php-ext-configure redis \
-      && make -j$(nproc) \
-      && make install \
-    ) \
-    && docker-php-ext-enable redis \
+    && curl -L -o /tmp/redis.tar.gz https://github.com/phpredis/phpredis/archive/$PHPREDIS_VERSION.tar.gz \
+    && tar xfz /tmp/redis.tar.gz \
+    && rm -r /tmp/redis.tar.gz \
+    && mv phpredis-$PHPREDIS_VERSION /usr/src/php/ext/redis \
+    && docker-php-ext-install redis \
     && docker-php-source delete
 
-# install apcu
-RUN pecl install apcu \
-    && docker-php-ext-enable apcu
+# apcu
+RUN docker-php-source extract \
+    && apk add --no-cache --virtual .phpize-deps-configure $PHPIZE_DEPS \
+    && pecl install apcu \
+    && docker-php-ext-enable apcu \
+    && apk del .phpize-deps-configure \
+    && docker-php-source delete
 
-#install xdebug
-RUN pecl install xdebug \
-    && docker-php-ext-enable xdebug
+
+# xdebug
+RUN docker-php-source extract \
+    && apk add --no-cache --virtual .phpize-deps-configure $PHPIZE_DEPS \
+    && pecl install xdebug \
+    && docker-php-ext-enable xdebug \
+    && apk del .phpize-deps-configure \
+    && docker-php-source delete
