--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -8,10 +8,18 @@ RUN docker-php-ext-install intl zip soap
 RUN docker-php-ext-install mysqli pdo pdo_mysql pdo_pgsql
 
 # mcrypt, gd, iconv
-RUN docker-php-ext-install mcrypt gd iconv
+RUN apk add --update --no-cache \
+        freetype-dev \
+        libjpeg-turbo-dev \
+        libmcrypt-dev \
+        libpng-dev \
+    && docker-php-ext-install -j"$(getconf _NPROCESSORS_ONLN)" iconv mcrypt \
+    && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
+    && docker-php-ext-install -j"$(getconf _NPROCESSORS_ONLN)" gd
 
 # gmp
-RUN docker-php-ext-install gmp
+RUN apk add --update --no-cache gmp \
+    && docker-php-ext-install gmp
 
 # php-redis
 ENV PHPREDIS_VERSION 3.0.0
