added imagick to alpine version

--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -53,6 +53,13 @@ RUN docker-php-source extract \
 # git client
 RUN apk add --update --no-cache git
 
+# imagick
+RUN apk add --update --no-cache autoconf g++ imagemagick-dev libtool make \
+    && pecl install imagick \
+    && docker-php-ext-enable imagick \
+    && apk del autoconf g++ libtool make
+
+
 RUN sed -i -e 's/listen.*/listen = 0.0.0.0:9000/' /usr/local/etc/php-fpm.conf
 
 RUN echo "expose_php=0" > /usr/local/etc/php/php.ini
